Cria a rota para realizar a pesquisa por genero e opcional por idioma, por exemple Drama - Chinese
